upgrade to angular 10 complete and tested

--- a/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
@@ -1,3 +1,4 @@
-<ngx-monaco-editor
-                   [ngModel]="content" (ngModelChange)="updateContent($event)" #editor>
+<ngx-monaco-editor [ngModel]="content"
+                   class="code-editor"
+                   (ngModelChange)="updateContent($event)">
 </ngx-monaco-editor>
