--- a/vyne-query-service/src/main/web/src/app/inheritence-graph/inheritance-graph.html
+++ b/vyne-query-service/src/main/web/src/app/inheritence-graph/inheritance-graph.html
@@ -4,7 +4,8 @@
              [enableZoom]="false"
              [panningEnabled]="false"
              [autoCenter]="false"
-             [autoZoom]="true"
+             [autoZoom]="false"
+             [zoomLevel]="1"
              [draggingEnabled]="false"
              [scheme]="colorScheme"
              [curve]="curve" (select)="select($event)">
