--- a/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.scss
@@ -1,3 +1,14 @@
 ngx-monaco-editor {
-    height: inherit;
+  height: 100%;
+
+}
+
+.code-editor {
+  height: 100%;
+  ::ng-deep .editor-container{
+    height: 100% !important;
+    .monaco-editor {
+      height: 100% !important;
+    }
+  }
 }
