--- a/vyne-query-service/src/main/web/src/fonts.scss
+++ b/vyne-query-service/src/main/web/src/fonts.scss
@@ -4,7 +4,7 @@
 //  font-style: normal;
 //  font-weight: 400;
 //  font-display: swap;
-//  src: /*local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), */ url("/assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format('truetype');
+//  src: __<<ngThemingMigrationEscapedComment1>>__ url("/assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format('truetype');
 //  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 //}
 
