--- a/vyne-query-service/src/main/web/src/theme.scss
+++ b/vyne-query-service/src/main/web/src/theme.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import "typography";
 @import "theme-colors";
 @import 'node_modules/@angular/material/theming';
@@ -59,9 +60,9 @@ mat-button-toggle-group.selector-button {
   border-radius: 20px;
 }
 
-$light-grey-1: mat-color($vyne-grey-blue-palette, 50);
-$light-grey-2: mat-color($vyne-grey-blue-palette, 100);
-$light-grey-3: mat-color($vyne-grey-blue-palette, 200);
+$light-grey-1: mat.get-color-from-palette($vyne-grey-blue-palette, 50);
+$light-grey-2: mat.get-color-from-palette($vyne-grey-blue-palette, 100);
+$light-grey-3: mat.get-color-from-palette($vyne-grey-blue-palette, 200);
 
 $border-dark: $light-grey-2;
 $borer-light: $light-purple-grey-300;
