--- a/vyne-query-service/src/main/web/src/app/schema-importer/schema-importer.component.html
+++ b/vyne-query-service/src/main/web/src/app/schema-importer/schema-importer.component.html
@@ -1,19 +1,1 @@
-<tui-accordion>
-  <tui-accordion-item [showArrow]="true">Models
-    <ng-template tuiAccordionItemContent [tuiTreeController]="true">
-      <tui-tree-item *ngFor="let entry of models">{{ entry.label }}</tui-tree-item>
-    </ng-template>
-  </tui-accordion-item>
-  <tui-accordion-item [showArrow]="true">Types
-    <ng-template tuiAccordionItemContent [tuiTreeController]="true">
-      <tui-tree-item *ngFor="let entry of types">{{ entry.label }}</tui-tree-item>
-    </ng-template>
-  </tui-accordion-item>
-  <tui-accordion-item [showArrow]="true">Services
-    <ng-template tuiAccordionItemContent [tuiTreeController]="true">
-      <tui-tree-item *ngFor="let service of services">{{ service.label }}
-        <tui-tree-item *ngFor="let operation of service.operations">{{ operation.qualifiedName.shortDisplayName }}</tui-tree-item>
-      </tui-tree-item>
-    </ng-template>
-  </tui-accordion-item>
-</tui-accordion>
+<app-schema-member-list [importedSchema]="importedSchema"> </app-schema-member-list>
