--- a/vyne-query-service/src/main/web/src/app/schema-importer/model-member-tree-node.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-importer/model-member-tree-node.component.scss
@@ -1,7 +1,10 @@
 @import "src/theme";
-
+:host {
+  font-size: 0.9rem;
+}
 .field-row {
   font-family: $mono;
+  font-size: 0.8rem;
 }
 .field-name {
   color: $body;
@@ -17,6 +20,10 @@ tui-tag {
 }
 
 .toggle-buttons-row {
+  display: flex;
+  tui-checkbox-labeled {
+    margin-right: 1.5rem;
+  }
   margin: 0.5rem 0;
   ::ng-deep button {
     opacity: 1 !important;
