--- a/vyne-query-service/src/main/web/src/app/schema-importer/type-search/type-search-result.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-importer/type-search/type-search-result.component.scss
@@ -2,11 +2,20 @@
 @import "../../search/seach-result/search-result.component";
 
 .search-result {
-  margin-top: 0.5rem;
+  padding: 0.5rem;
+  margin-right: 0.5rem;
+  border: 1px solid rgba(0,0,0,0);
   border-bottom: 1px solid rgba($vyne-lilac, 0.2);
+
+  &.active, &:hover {
+    background-color: rgba($vyne-lilac, 0.1);
+    border: 1px solid rgba($vyne-lilac, 0.5);
+    border-radius: 4px;
+  }
 }
 
 .type-name {
   font-size: 120%;
   line-height: 1.5;
 }
+
