--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer-container.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer-container.component.scss
@@ -1,5 +1,7 @@
 @import "src/theme";
 :host {
   background-color: $body-bg;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
