--- a/vyne-query-service/src/main/web/src/app/schema-importer/schema-importer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-importer/schema-importer.component.scss
@@ -7,4 +7,17 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  max-height: 100vh;
+}
+
+.page-content {
+  padding: 1rem 2rem;
+  overflow: auto;
+  display: flex;
+}
+
+.step {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
