--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -3,6 +3,7 @@
     <div class="type-name">
       <h1>{{type?.name?.name}}</h1>
       <span class="mono-badge">{{type?.name?.fullyQualifiedName}}</span>
+      <app-inherits-from [type]="type" [editable]="editable" ></app-inherits-from>
     </div>
 
 
@@ -10,22 +11,27 @@
     <!--      <h2>About this type</h2>-->
     <!--      <p>{{description}}</p>-->
     <!--    </section>-->
-    <section>
-      <app-description-editor-container [type]="type"></app-description-editor-container>
+    <section *ngIf="showDocumentation">
+      <app-description-editor-container [type]="type" [editable]="editable"></app-description-editor-container>
     </section>
-    <section class="no-h2">
+    <section class="no-h2" *ngIf="showTags">
       <app-tags-section [metadata]="type.metadata" [type]="type"></app-tags-section>
     </section>
-    <app-inheritance-graph *ngIf="inheritanceView" [inheritable]="inheritanceView"></app-inheritance-graph>
-    <section *ngIf="hasAttributes">
+
+    <app-inheritance-graph *ngIf="inheritanceView && showInheritanceGraph" [inheritable]="inheritanceView"></app-inheritance-graph>
+    <section *ngIf="hasAttributes && showAttributes">
       <h2>Attributes</h2>
-      <app-attribute-table [type]="type"></app-attribute-table>
+      <app-model-attribute-tree-list
+        [schema]="schema"
+        [anonymousTypes]="anonymousTypes"
+        [model]="type"
+        [editable]="editable"></app-model-attribute-tree-list>
     </section>
-    <section *ngIf="hasEnumValues">
+    <section *ngIf="hasEnumValues && showDocumentation">
       <h2>Enum Values</h2>
       <app-enum-table [type]="type"></app-enum-table>
     </section>
-    <section>
+    <section *ngIf="showUsages">
       <h2>Usages</h2>
       <h3>Services</h3>
       <app-usages-table [typeUsages]="typeUsages"></app-usages-table>
@@ -35,27 +41,31 @@
         <mat-button-toggle value="lineage">Lineage</mat-button-toggle>
       </mat-button-toggle-group>
       <div class="chart-container" *ngIf="chartSelector.value === 'lineage'">
-        <p class="help-text">This chart shows how {{type.name.shortDisplayName}} data flows between data sources and systems.</p>
+        <p class="help-text">This chart shows how {{type.name.shortDisplayName}} data flows between data sources and
+          systems.</p>
         <p class="help-text">{{type.name.shortDisplayName}} flows between these services outside of Vyne.</p>
-        <app-service-lineage-graph-container  [type]="schemaMember"></app-service-lineage-graph-container>
+        <app-service-lineage-graph-container [type]="schemaMember"></app-service-lineage-graph-container>
       </div>
       <div class="chart-container" *ngIf="chartSelector.value === 'links'">
-        <p class="help-text">This chart shows how {{type.name.shortDisplayName}} links between data sources to make other data available.</p>
-        <p class="help-text">The data shown here is discoverable by Vyne using a query, and knowing the value of a {{type.name.shortDisplayName}}. </p>
-        <app-type-link-graph-container [member]="schemaMember" *ngIf="chartSelector.value === 'links'"></app-type-link-graph-container>
+        <p class="help-text">This chart shows how {{type.name.shortDisplayName}} links between data sources to make
+          other data available.</p>
+        <p class="help-text">The data shown here is discoverable by Vyne using a query, and knowing the value of
+          a {{type.name.shortDisplayName}}. </p>
+        <app-type-link-graph-container [member]="schemaMember"
+                                       *ngIf="chartSelector.value === 'links'"></app-type-link-graph-container>
       </div>
     </section>
 
-<!--    <section *ngIf="showPolicyManager">-->
-<!--      <h2>Policies</h2>-->
-<!--      <app-policy-manager-container [targetType]="type"></app-policy-manager-container>-->
+    <!--    <section *ngIf="showPolicyManager">-->
+    <!--      <h2>Policies</h2>-->
+    <!--      <app-policy-manager-container [targetType]="type"></app-policy-manager-container>-->
 
-<!--    </section>-->
+    <!--    </section>-->
 
-    <section>
+    <section *ngIf="showTaxi">
       <h2>Definition</h2>
       <app-simple-code-viewer name="Taxi" [content]="sourceTaxi" lang="taxi" [expanded]="true"></app-simple-code-viewer>
-<!--      <app-code-viewer [sources]="sources"></app-code-viewer>-->
+      <!--      <app-code-viewer [sources]="sources"></app-code-viewer>-->
     </section>
   </div>
   <div class="spacer-gap" *ngIf="showContentsList"></div>
