--- a/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.html
@@ -15,10 +15,13 @@
             </li>
           </ul>
         </div>
-        <mat-form-field appearance="outline">
-          <mat-label>Type name</mat-label>
-          <input matInput formControlName="typeName" required>
-        </mat-form-field>
+        <tui-input formControlName="typeName">
+          Type name
+        </tui-input>
+<!--        <mat-form-field appearance="outline">-->
+<!--          <mat-label>Type name</mat-label>-->
+<!--          <input matInput formControlName="typeName" required>-->
+<!--        </mat-form-field>-->
       </div>
     </div>
     <div class="form-row">
@@ -40,10 +43,13 @@
             </li>
           </ul>
         </div>
-        <mat-form-field appearance="outline">
-          <mat-label>Type namespace</mat-label>
-          <input matInput formControlName="namespace">
-        </mat-form-field>
+        <tui-input formControlName="namespace">
+          Default namespace
+        </tui-input>
+<!--        <mat-form-field appearance="outline">-->
+<!--          <mat-label>Type namespace</mat-label>-->
+<!--          <input matInput formControlName="namespace">-->
+<!--        </mat-form-field>-->
       </div>
     </div>
     <div class="form-row">
