--- a/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.scss
@@ -22,7 +22,7 @@
     color: lighten($body, 15%);
   }
 
-  mat-form-field, app-type-autocomplete, .form-element {
+  mat-form-field, app-type-autocomplete, .form-element, tui-input {
     flex-grow: 1;
   }
 
