wip : emit edit events when the inherited type changes

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -3,7 +3,10 @@
     <div class="type-name">
       <h1>{{type?.name?.name}}</h1>
       <span class="mono-badge">{{type?.name?.fullyQualifiedName}}</span>
-      <app-inherits-from [type]="type" [editable]="editable"></app-inherits-from>
+      <app-inherits-from [type]="type" [editable]="editable"
+                         [commitMode]="commitMode"
+                         (updateDeferred)="typeUpdated.emit(type)"
+      ></app-inherits-from>
     </div>
 
 
