fix(ui-schema-editor): propogate changes made in the model-member-tree-node.component back onto the type, so they are persisted when save is clicked

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -39,7 +39,10 @@
         [showFullTypeNames]="showFullTypeNames"
         [anonymousTypes]="anonymousTypes"
         [model]="type"
-        [editable]="editable"></app-model-attribute-tree-list>
+        [editable]="editable"
+        [commitMode]="commitMode"
+        (updateDeferred)="typeUpdated.emit(type)"
+      ></app-model-attribute-tree-list>
     </section>
     <section *ngIf="hasEnumValues && showDocumentation">
       <h2>Enum Values</h2>
