--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -1,52 +1,15 @@
-<!--<div class="top-level">-->
-<!--  <div class="type-name " *ngIf="topLevel">{{ type?.name.name }}</div>-->
-<!--</div>-->
-<div (click)="onTopLevelPrimitiveClicked()" *ngIf="isScalar" class="typed-value-container"
-     [class.selectable]="selectable"
->
-  <div class="type-value">{{ scalarValue }}</div>
-</div>
-<div class="typed-object-container" *ngIf="isTypedObject">
-  <div *ngFor="let attributeName of typedObjectAttributeNames" class="attribute-row"
-       [class.object-row]="!getTypeForAttribute(attributeName).isScalar">
-    <div class="attribute-name">
-      {{ attributeName }}
-    </div>
-<!--    <div class="type-name-container table-cell">-->
-<!--      <div class="type-name">{{ getTypeForAttribute(attributeName).name.name }}</div>-->
-<!--    </div>-->
-    <div class="attribute-value table-cell"
-         (click)="onAttributeClicked(attributeName)"
-         [class.selectable]="selectable"
-         *ngIf="getTypeForAttribute(attributeName).isScalar">{{ getTypedObjectAttributeValue(attributeName) }}</div>
-    <app-object-view *ngIf="!getTypeForAttribute(attributeName).isScalar"
-                     [instance]="getTypedObjectAttribute(attributeName)"
-                     [type]="getTypeForAttribute(attributeName)"
-                     [schema]="schema"
-                     [topLevel]="false"
-                     [selectable]="selectable"
-                     [path]="path + '.' + attributeName"
-                     [rootInstance]="rootInstance"
-                     (instanceClicked)="instanceClicked.emit($event)"
-    ></app-object-view>
+<cdk-virtual-scroll-viewport class="viewport" appendOnly autosize>
+  <div *cdkVirtualFor="let item of treeData">
+    <tui-tree
+      [value]="item"
+      [tuiTreeController]="true"
+      [content]="treeContent"
+      [childrenHandler]="treeChildrenHandler"></tui-tree>
   </div>
-</div>
-<div class="typed-object-container" *ngIf="isArray">
-  <div *ngFor="let collectionMember of instance; let i = index; let odd = odd" class="result-collection-member">
-    <div class="collection-index" [class.odd]="odd">#{{i + 1}}</div>
-    <div class="collection-member">
-      <app-object-view [instance]="collectionMember"
-                       [schema]="schema"
-                       [type]="collectionMemberType"
-                       [topLevel]="false"
-                       [selectable]="selectable"
-                       [path]="path + '.[' + i + ']'"
-                       [rootInstance]="rootInstance || collectionMember"
-                       (instanceClicked)="instanceClicked.emit($event)"
-      ></app-object-view>
-
-    </div>
+</cdk-virtual-scroll-viewport>
+<ng-template #treeContent let-item>
+  <div class="tree-node">
+    <div *ngIf="treeNode(item).fieldName" class="field-name">{{treeNode(item).fieldName}}</div>
+    <div class="field-value" [class.selectable]="selectable" (click)="onAttributeClicked(item)">{{treeNode(item).value}}</div>
   </div>
-
-</div>
-
+</ng-template>
