allow creation of new types from search ui

--- a/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.html
@@ -44,7 +44,7 @@
           </ul>
         </div>
         <tui-input formControlName="namespace">
-          Default namespace
+          Type namespace
         </tui-input>
 <!--        <mat-form-field appearance="outline">-->
 <!--          <mat-label>Type namespace</mat-label>-->
