--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -5,6 +5,7 @@
       <span class="mono-badge">{{type?.name?.fullyQualifiedName}}</span>
       <app-inherits-from [type]="type" [editable]="editable"
                          [commitMode]="commitMode"
+                         (newTypeCreated)="newTypeCreated.emit($event)"
                          (updateDeferred)="typeUpdated.emit(type)"
       ></app-inherits-from>
     </div>
@@ -41,6 +42,7 @@
         [model]="type"
         [editable]="editable"
         [commitMode]="commitMode"
+        (newTypeCreated)="newTypeCreated.emit($event)"
         (updateDeferred)="typeUpdated.emit(type)"
       ></app-model-attribute-tree-list>
     </section>
