allow editing of operation parameter types and return type

--- a/vyne-query-service/src/main/web/src/app/operation-view/operation-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/operation-view/operation-view.component.scss
@@ -4,6 +4,14 @@
 @import "src/toolbar";
 @import "src/app/service-view/service-view-common-styles";
 
+.row {
+  display: flex;
+  span {
+    font-size: 0.85rem;
+    margin-right: 1rem;
+  }
+}
+
 .parameter-list {
   @include vyne-table()
 }
