fix(object-view): fix tree labels for nested array fields

--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
@@ -1,7 +1,11 @@
 @import "src/theme";
 
-.viewport {
+:host {
+  display: flex;
   height: 100%;
+}
+.viewport {
+  flex-grow: 1;
 }
 
 .tree-node {
