--- a/vyne-query-service/src/main/web/src/app/query-history/vyneql-record.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-history/vyneql-record.component.scss
@@ -1,7 +1,6 @@
 @import "src/theme";
 
-.query-description {
+.history-item {
   font-family: $mono;
-  line-height: 1.5rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
