tweak(ui/landing-page): modify language in the cards.  "Search the catalog" now takes the user to the catalog search page.

--- a/vyne-query-service/src/main/web/src/app/landing-page/landing-page.component.scss
+++ b/vyne-query-service/src/main/web/src/app/landing-page/landing-page.component.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: unset; // remove height 100%
+  padding: 2rem 2rem 0; // override padding to remove the bottom
 }
 
 .row {
