made layout consistent in pipeline/auth/connection manager, and added empty states

--- a/vyne-query-service/src/main/web/src/tables.scss
+++ b/vyne-query-service/src/main/web/src/tables.scss
@@ -16,7 +16,7 @@
   }
 
   tr:nth-child(even) {
-    background-color: rgba($vyne-lilac, 0.08);
+    background-color: $bg-color-even;
   }
 
   @include links();
