refactor(connectors): show kafka connection in the UI, make config framework from jdbc reusable for Kafka.

--- a/vyne-query-service/src/main/web/src/app/db-connection-editor/db-connection-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/db-connection-editor/db-connection-editor.component.html
@@ -12,7 +12,7 @@
         [stringify]="stringifyJdbcDriver"
         [(ngModel)]="selectedDriver"
         (ngModelChange)="setDriver()">
-        Database type
+        Connection type
         <tui-data-list-wrapper *tuiDataList
                                [items]="drivers | tuiFilterByInputWith : stringifyJdbcDriver"
                                [itemContent]="stringifyJdbcDriver | tuiStringifyContent">
