feature(connectors/kafka): enable creation & persistence of kafka connections and topic mappings through UI

--- a/vyne-query-service/src/main/web/src/app/db-connection-editor/db-connection-wizard.component.scss
+++ b/vyne-query-service/src/main/web/src/app/db-connection-editor/db-connection-wizard.component.scss
@@ -10,6 +10,6 @@ $wizard-component-width: 800px;
   margin-top: 3rem;
 }
 
-app-db-connection-editor {
+app-connection-editor {
   width: $wizard-component-width;
 }
