--- a/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
+++ b/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
@@ -4,7 +4,7 @@
       <img src="assets/img/vyne-logo-horizontal-gap.svg" alt="Vyne">
     </a>
   </div>
-  <div *ngFor="let element of sidebarElements" class="navbar-route" [routerLink]="element.route"
+  <div *ngFor="let element of sidebarElements$ | async" class="navbar-route" [routerLink]="element.route"
        routerLinkActive="active">
     <a [routerLink]="element.route" routerLinkActive="active" #rla="routerLinkActive"
        [attr.data-e2e-id]="element.testId">
