--- a/tools/graph-vis/src/app/type-link-graph/type-link-graph.component.html
+++ b/tools/graph-vis/src/app/type-link-graph/type-link-graph.component.html
@@ -19,11 +19,11 @@
 
     <ng-template #nodeTemplate let-node>
       <svg:g class="node" style="filter:url(#shadow)" ngx-tooltip
-             [tooltipPlacement]="'top'" s
+             [tooltipPlacement]="'top'"
              [tooltipType]="'tooltip'"
              [tooltipTitle]="tooltipTitle(node)">
-        <svg:path [attr.d]="outerRectangle(node.dimension.width, node.dimension.height)" stroke="none" fill="white"></svg:path>
-        <svg:path [attr.d]="innerRectangle(4, node.dimension.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
+        <svg:path [attr.d]="outerRectangle(node.width, node.height)" stroke="none" fill="white"></svg:path>
+        <svg:path [attr.d]="innerRectangle(4, node.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
         <!--          <svg:rect [attr.width]="node.width" [attr.height]="node.height"-->
         <!--                    stoke-width="2"-->
         <!--                    [attr.fill]="getStroke(node)" stroke="#000000" rx="6" ry="6"/>-->
