fix(ui/catalog): attribute names in type viewer are now clickable, and take user to the corresponding type. Fixes #LENS-641

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -42,6 +42,7 @@
         [model]="type"
         [editable]="editable"
         [commitMode]="commitMode"
+        (typeNameClicked)="navigateToType($event)"
         (newTypeCreated)="newTypeCreated.emit($event)"
         (updateDeferred)="typeUpdated.emit(type)"
       ></app-model-attribute-tree-list>
