feature(analytics): profiler views are now available when running a streaming query
 * Load profile data in the UI whenever the user goes to the profiler tab (was: only when query was finished)
 * persist sankey chart data periodically (2s / 50 items) when query is running

LENS-673

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -28,6 +28,7 @@
         <app-tabbed-results-view [instances$]="results$"
                                  [profileData$]="queryProfileData$"
                                  [type]="resultType"
+                                 (loadProfileData)="loadProfileData()"
                                  [anonymousTypes]="anonymousTypes"
                                  (instanceSelected)="valuePanelVisible = true; instanceSelected$.next($event)"
                                  (downloadClicked)="downloadQueryHistory($event.format)"
