--- a/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
@@ -15,11 +15,18 @@
 <!--    </ng-template>-->
 <!--  </mat-tab>-->
 <!--</mat-tab-group>-->
+
 <div class="code-viewer-container">
-  <ngx-monaco-editor [options]="editorOptions"
-                     class="code-editor"
-                     [ngModel]="sourceContent"
-                     #editor
-  ></ngx-monaco-editor>
-  <app-error-list *ngIf="selectedSourceErrors?.length > 0" [errors]="selectedSourceErrors"></app-error-list>
+  <as-split direction="vertical" unit="pixel">
+    <as-split-area size="*">
+      <ngx-monaco-editor [options]="editorOptions"
+                         class="code-editor"
+                         [ngModel]="sourceContent"
+                         #editor
+      ></ngx-monaco-editor>
+    </as-split-area>
+    <as-split-area *ngIf="selectedSourceErrors?.length > 0" maxSize="200">
+      <app-error-list [errors]="selectedSourceErrors"></app-error-list>
+    </as-split-area>
+  </as-split>
 </div>
