--- a/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
@@ -75,13 +75,13 @@ ngx-monaco-editor {
 .code-viewer-container {
   margin-top: 0.5rem;
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  //display: flex;
+  //flex-direction: column;
 
-  app-error-list {
-    max-height: 200px;
-    flex-grow: 1;
-  }
+  //app-error-list {
+  //  max-height: 200px;
+  //  flex-grow: 1;
+  //}
 }
 .code-editor {
   //display: block;
